--- a/R_codes/Aula_1.qmd
+++ b/R_codes/Aula_1.qmd
@@ -1,12 +1,15 @@
 ---
 title: "Aula_1"
 format: html
-editor: visual
-editor_options: 
-  chunk_output_type: console
+author: "David Aimar"
 ---
 
-# Running Code
+
+
+## O que um **Quarto Document**?
+
+## Caracaterização de dados
+
 
 ## Aprendendo a atribuir valores
 
