--- a/R_codes/Aula_2.qmd
+++ b/R_codes/Aula_2.qmd
@@ -1,8 +1,8 @@
 ---
 title: "Aula_2"
 format: html
+author: "David Aimar"
 ---
-
 
 ## Instalação de Pacotes
 
@@ -11,4 +11,3 @@ A instalação de pacotes pode ser feita através do menu: Tools \> Install pack
 ```{r}
 #install.packages(nome do pacote de interesse)
 ```
-
